# aichar

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
aichar/: __init__.py  __init__.pyi
src/: lib.rs
