[package]
name = "aichar"
version = "0.4.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aichar"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
base64 = "0.21.4"
png = "0.17.10"
