[package]
name = "aichar"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aichar"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
base64 = "0.21.5"
png = "0.17.10"
chrono = "0.4.31"
